force-app/main/default/objects/Batch_Apex_Error_Settings__c/Batch_Apex_Error_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Batch Apex Error Handler Settings</label>
</CustomObject>