force-app/main/default/objects/Batch_Apex_Error_Settings__c/fields/Days_to_Retain_Errors__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Retain_Errors__c</fullName>
    <inlineHelpText>If you have enabled storing errors as custom objects you can specify how many days to retain those errors. If blank, Batch Apex Error records are not removed and will need to be cleaned up manually.</inlineHelpText>
    <label>Days to Retain Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>