force-app/main/default/objects/Batch_Apex_Error_Settings__c/fields/Send_Errors_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Errors_To__c</fullName>
    <inlineHelpText>If populated any batch errors will be emailed to the emails listed in this field. Separate multiple emails with commas.</inlineHelpText>
    <label>Send Errors To</label>
    <type>TextArea</type>
</CustomField>