force-app/main/default/objects/Batch_Apex_Error_Settings__c/fields/Store_Errors_in_Custom_Object__c.field-meta.xml
<CustomField>
    <fullName>Store_Errors_in_Custom_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, records will be stored in the Batch Apex Error object for reporting beyond the 24 hours.</inlineHelpText>
    <label>Store Errors in Custom Object</label>
    <type>Checkbox</type>
</CustomField>